--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
     <!-- build:css({.tmp,src}) styles/vendor.css -->
     <link rel="stylesheet" href="bower_components/bootstrap-sass/assets/stylesheets/bootstrap.css"/>
+    <link rel="stylesheet" href="bower_components/font-awesome/scss/font-awesome.css"/>
     <!-- bower:css -->
     <!-- run `gulp inject` to automatically populate bower styles dependencies -->
     <!-- endbower -->
