FIX: Se cambia estructura de toolbar para material

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <!-- build:css({.tmp,src}) styles/vendor.css -->
     <link rel="stylesheet" href="bower_components/bootstrap-sass/assets/stylesheets/bootstrap.css"/>
     <link rel="stylesheet" href="bower_components/font-awesome/scss/font-awesome.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+    
     <!-- bower:css -->
     <!-- run `gulp inject` to automatically populate bower styles dependencies -->
     <!-- endbower -->
