FIX: Nuevo direcotrio dist

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- build:css({.tmp,src}) styles/vendor.css -->
+    <!-- build:css({.tmp,src}) styles/angular-pit-table_vendor.css -->
     <link rel="stylesheet" href="bower_components/bootstrap-sass/assets/stylesheets/bootstrap.css"/>
     <link rel="stylesheet" href="bower_components/font-awesome/scss/font-awesome.css"/>
     
@@ -16,7 +16,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:css({.tmp,src}) styles/app.css -->
+    <!-- build:css({.tmp,src}) styles/angular-pit-table.css -->
     <link rel="stylesheet" href="index.css"/>
     <!-- endbuild -->
   </head>
@@ -25,13 +25,13 @@
     <ptable pt-columns="$ctrl.ptColumns" pt-data="$ctrl.data" pt-parameters="$ctrl.ptParams" selected-c="$ctrl.selectedC" un-selected-c="$ctrl.unSelectedC"></ptable>
   </body>
 
-  <!-- build:js({.tmp,src}) scripts/vendor.js -->
+  <!-- build:js({.tmp,src}) scripts/angular-pit-table_vendor.js -->
   <!-- bower:js -->
   <!-- run `gulp inject` to automatically populate bower script dependencies -->
   <!-- endbower -->
   <!-- endbuild -->
 
-  <!-- build:js({.tmp,src}) scripts/app.js -->
+  <!-- build:js({.tmp,src}) scripts/angular-pit-table.js -->
   <!-- inject:js -->
   <!-- js files will be automatically insert here -->
   <!-- endinject -->
